--- a/Projects/Lab1/Exec2/platformio.ini
+++ b/Projects/Lab1/Exec2/platformio.ini
@@ -8,8 +8,20 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:nodemcu-32s]
-platform = espressif32
-board = nodemcu-32s
+[env:pico]
+;platform = raspberrypi
+platform = https://github.com/maxgerhardt/platform-raspberrypi.git
+board = pico
 framework = arduino
-monitor_speed = 921600
+
+board_build.core = earlephilhower
+board_build.filesystem_size = 0.5m
+
+; You may need to specifiy the correct COM port if there are several candidates
+;upload_port = COM11
+
+monitor_speed = 115200
+
+
+lib_deps = 
+   mryslab/NeoPixelConnect @ ^1.2.0
