--- a/Projects/Encoder/platformio.ini
+++ b/Projects/Encoder/platformio.ini
@@ -9,16 +9,6 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:pico]
-platform = https://github.com/maxgerhardt/platform-raspberrypi.git
+platform = raspberrypi
 board = pico
-;board = rpipicow
-
 framework = arduino
-board_build.core = earlephilhower
-board_build.filesystem_size = 0.5m
-
-monitor_speed = 115200
-;monitor_eol = LF
-
-lib_deps = 
-  adafruit/Adafruit TCS34725@^1.4.2
