--- a/Projects/picoW_VL53L0X/picoW_VL53L0X/platformio.ini
+++ b/Projects/picoW_VL53L0X/picoW_VL53L0X/platformio.ini
@@ -10,8 +10,8 @@
 
 [env:pico]
 platform = https://github.com/maxgerhardt/platform-raspberrypi.git
-;board = pico
-board = rpipicow
+board = pico
+;board = rpipicow
 framework = arduino
 board_build.core = earlephilhower
 board_build.filesystem_size = 0.5m
