--- a/Projects/ACE_Final_Project/Final_Product/.vscode/settings.json
+++ b/Projects/ACE_Final_Project/Final_Product/.vscode/settings.json
@@ -5,6 +5,10 @@
         "iterator": "cpp",
         "memory": "cpp",
         "random": "cpp",
-        "functional": "cpp"
+        "functional": "cpp",
+        "string": "cpp",
+        "vector": "cpp",
+        "string_view": "cpp",
+        "system_error": "cpp"
     }
 }
