--- a/Projects/ACE_Final_Project/Servos Test/platformio.ini
+++ b/Projects/ACE_Final_Project/Servos Test/platformio.ini
@@ -11,7 +11,8 @@
 [env:pico]
 ;platform = raspberrypi
 platform = https://github.com/maxgerhardt/platform-raspberrypi.git
-board = rpipicow
+board = pico
+;board = rpipicow
 framework = arduino
 
 board_build.core = earlephilhower
