--- a/Projects/ACE_Final_Project/Wifi/platformio.ini
+++ b/Projects/ACE_Final_Project/Wifi/platformio.ini
@@ -9,16 +9,18 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:pico]
+;platform = raspberrypi
 platform = https://github.com/maxgerhardt/platform-raspberrypi.git
 ;board = pico
 board = rpipicow
 framework = arduino
+
 board_build.core = earlephilhower
 board_build.filesystem_size = 0.5m
 
-monitor_speed = 115200
-;monitor_eol = LF
+; You may need to specifiy the correct COM port if there are several candidates
+;upload_port = COM11
 
-lib_deps = 
-  adafruit/Adafruit TCS34725@^1.4.2
-  khoih-prog/RP2040_PWM@^1.4.0
+monitor_speed = 115200
+
+
