--- a/Projects/ACE_Lab0/Exec3/platformio.ini
+++ b/Projects/ACE_Lab0/Exec3/platformio.ini
@@ -11,7 +11,7 @@
 [env:pico]
 ;platform = raspberrypi
 platform = https://github.com/maxgerhardt/platform-raspberrypi.git
-board = pico
+board = rpipicow
 framework = arduino
 
 board_build.core = earlephilhower
