--- a/Projects/ACE_Final_Project/Final_Product/platformio.ini
+++ b/Projects/ACE_Final_Project/Final_Product/platformio.ini
@@ -22,3 +22,6 @@ monitor_speed = 115200
 lib_deps = 
   adafruit/Adafruit TCS34725@^1.4.2
   khoih-prog/RP2040_PWM@^1.4.0
+
+[env]
+lib_extra_dirs = ./include
